# Hello-There

./: .gitignore  README.md  setup.sh
desktop/tauri/hello-there-tauri/: package-lock.json  package.json
desktop/tauri/hello-there-tauri/src-tauri/: tauri.conf.json
golang/basic/: hello.go
golang/mod/: hello.go
rust/cargo/hello_there/src/: main.rs
web/rust-wasm/hello-there-wasm/: Cargo.toml  index.html
web/rust-wasm/hello-there-wasm/src/: lib.rs
web/svelte/hello-there/: package-lock.json  package.json
web/svelte/hello-there-ts/: package-lock.json  package.json
web/svelte/hello-there-ts/src/: App.svelte
web/svelte/hello-there/src/: App.svelte
web/web-ts/: index.html
